--- a/code-along.css
+++ b/code-along.css
@@ -1,7 +1,3 @@
-nav {
-  /*display: none;*/
-}
-
 .container {
   display: flex;
   justify-content: space-around;
@@ -19,12 +15,8 @@ img {
   height: 125px;;
 }
 
-* {
-  border: 1px solid teal;
-}
-
 section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
 }
